cleaned the code added DistributedSolution but it is not working